<resources>
    //------General
    <string name="AppName">Trek\nYour\nWallet</string>


    //------Login
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="noAccount">No account yet? Create one</string>
    <string name="unvalid">Unvalid Email or Password</string>

    //------Register
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="create">Create Account</string>
    <string name="alreadyMember">Already a member? Login</string>
    <string name="mailValid">Email is already used by different user</string>

    //------Overview
    <string name="remaining">Budget remaining today:</string>
    <string name="activate">Set a trip to current to check budget here</string>

    //------AddExpense
    <string name="addExpense">Add expense</string>
    <string name="expenseName">Name</string>
    <string name="expensePrice">Price</string>
    <string name="eur">€</string>

    //------ChangePassword
    <string name="change_password_heading">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done_button">Update Password</string>
    <string name="required">Password not strong enough</string>
    <string name="passwords_check">Passwords do not match!</string>

    //------Navigation
    <string name="overview">Overview</string>
    <string name="trips">Trips</string>

    //------AddTrip
    <string name="addTrip">Add Trip</string>
    <string name="next">Next</string>
    <string name="budget">Budget</string>

    //------AddCountries
    <string name="addTCountriesTitle">Add Countries</string>
    <string name="Search">Search</string>

    //------AddCountries
    <string name="many">How many days?</string>
    <string name="days">Days</string>

    //------Trip
    <string name="setCurrent">Start Trip</string>
    <string name="day">Day %1$s</string>
    <string name="daysForTrip">%1$s Days</string>
    <string name="budgetCreatedTrip">Budget: %1$s</string>
    <string name="budgetSpendCreatedTrip">Budget Spend: %1$s</string>
    <string name="style0">We recommend a higher budget for this trip</string>
    <string name="style1">The budget is very low for this trip</string>
    <string name="style2">The budget is low for this trip</string>
    <string name="style3">The budget is average for this trip</string>
    <string name="style4">The budget is above average for this trip</string>
    <string name="style5">The budget is very comfortable for this trip</string>


    <string name="action_settings">Settings</string>

    <string name="username">Username</string>
    <string name="lastname">Last name</string>
    <string name="firstname">First name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="errorMessage">You need to enter a value</string>
    <string name="logout">Log out</string>
    <string name="changePassword">Password</string>
    <string name="internetConnectie">Geen interet connectie</string>




</resources>



