<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".displayClasses.AccountScreen.AccountFragment"

    >

    <PreferenceCategory android:title="Account">

        <com.example.flow.displayClasses.AccountScreen.SummaryShowingEditTextPreference
            android:title="@string/username"
            android:inputType="textPersonName"
            android:summary="%s"
            android:icon="@drawable/ic_person_teal_24dp"
            android:key="username" />
        <com.example.flow.displayClasses.AccountScreen.SummaryShowingEditTextPreference
            android:title="@string/firstname"
            android:inputType="textPersonName"
            android:summary="%s"
            android:icon="@drawable/ic_person_teal_24dp"
            android:key="firstname" />

        <com.example.flow.displayClasses.AccountScreen.SummaryShowingEditTextPreference
            android:title="@string/lastname"
            android:inputType="textPersonName"
            android:summary="%s"
            android:icon="@drawable/ic_person_teal_24dp"
            android:key="lastname" />

        <com.example.flow.displayClasses.AccountScreen.SummaryShowingEditTextPreference
            android:title="@string/phone_number"
            android:inputType="phone"
            android:summary="%s"
            android:key="phone" />
        <com.example.flow.displayClasses.AccountScreen.SummaryShowingEditTextPreference
            android:title="@string/email"
            android:inputType="textEmailAddress"
            android:summary="%s"
            android:key="email" />
    </PreferenceCategory>
</PreferenceScreen>