<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".displayClasses.ChangePassword.ChangePasswordFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="10dp"
        android:padding="3dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingTop="2dp"
            android:text="@string/change_password_heading"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:id="@+id/change_password_heading"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/iron"
            app:passwordToggleDrawable="@drawable/icon_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            android:layout_marginTop="12dp">
            <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:textColorHint="@color/iron"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/iron"
            app:passwordToggleDrawable="@drawable/icon_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            android:layout_marginTop="12dp">
            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="true"
                android:hint="@string/new_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/iron"
            app:passwordToggleDrawable="@drawable/icon_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            android:layout_marginTop="12dp">
            <EditText
                android:id="@+id/connfirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/primary"
            android:text="@string/done_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/accent"
            android:text="@string/delete_button"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>